# varcore

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: public-contract.md  session-D-prompt.md
docs/guides/: data-handling.md  key-management.md  runbook.md  trust-model.md
docs/reference/: contract.md  demo-spec.md  policy-schema.json  receipt-types.md  report-template.md  session-prompt-standard.md
examples/: enforce.yaml  observe.yaml
python-verifier/: .gitignore  BASELINE.md  LICENSE  README.md  pyproject.toml  setup.cfg
python-verifier/nonsudo_verify/: __init__.py  __main__.py  chain.py  cli.py  crypto.py  key_resolver.py  models.py  receipt.py  timestamp.py  verifier.py
python-verifier/tests/: conftest.py  test_chain.py  test_conformance.py  test_cross_verification.py  test_crypto.py  test_receipt.py  test_timestamp.py  test_verifier.py
python-verifier/tests/fixtures/conformance/: TV_01_pass.ndjson  TV_02_pass.ndjson  TV_03_pass.ndjson  TV_04_pass.ndjson  TV_05_pass.ndjson  TV_06_pass.ndjson  TV_07_pass.ndjson  TV_08_pass.ndjson  TV_09_pass.ndjson  TV_10_pass.ndjson  TV_11_pass.ndjson  TV_12_pass.ndjson  TV_13_pass.ndjson  TV_14_pass.ndjson  TV_15_pass.ndjson  TV_16_pass.ndjson  TV_17_pass.ndjson  TV_18_pass.ndjson  TV_19_pass.ndjson  TV_20_pass.ndjson  TV_21_pass.ndjson  expected.json
schema-server/: package.json  tsconfig.json  wrangler.toml
scripts/: gen-vectors.mjs  generate-golden-vectors.ts  generate-test-vectors.ts  golden-vector-policy.yaml
(+11 files in other folders)
